--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,36 @@
+Brotli==1.0.9
+cffi==1.15.0
+click==8.0.3
+cssselect2==0.4.1
+fonttools==4.28.5
+ghp-import==2.0.2
+html5lib==1.1
+importlib-metadata==4.10.1
+Jinja2==3.0.3
+Markdown==3.3.6
+MarkupSafe==2.0.1
+mergedeep==1.3.4
 mkdocs==1.2.3
 mkdocs-bootstrap386==0.0.2
 mkdocs-material==8.1.7
 mkdocs-material-extensions==1.0.3
-mkpdfs-mkdocs
+mkpdfs-mkdocs==1.0.1
+packaging==21.3
+Pillow==9.0.0
+pycparser==2.21
+pydyf==0.1.2
+Pygments==2.11.2
+pymdown-extensions==9.1
+pyparsing==3.0.6
+pyphen==0.12.0
+python-dateutil==2.8.2
+PyYAML==6.0
+pyyaml_env_tag==0.1
+six==1.16.0
+soupsieve==2.3.1
+tinycss2==1.1.1
+watchdog==2.1.6
+weasyprint==54.0
+webencodings==0.5.1
+zipp==3.7.0
+zopfli==0.1.9
