--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+beautifulsoup4==4.10.0
 Brotli==1.0.9
 cffi==1.15.0
 click==8.0.3
 cssselect2==0.4.1
 fonttools==4.28.5
+ghp-import==2.0.2
+html5lib==1.1
+importlib-metadata==4.10.1
+Jinja2==3.0.3
+libsass==0.21.0
+Markdown==3.3.6
+MarkupSafe==2.0.1
+mergedeep==1.3.4
 mkdocs==1.2.3
 mkdocs-bootstrap386==0.0.2
 mkdocs-material==8.1.7
 mkdocs-material-extensions==1.0.3
-mkpdfs-mkdocs==1.0.1
+mkdocs-with-pdf==0.9.3
 packaging==21.3
 Pillow==9.0.0
 pycparser==2.21
